@@ -251,7 +251,7 @@ public final class LogUtils {
             fTime = System.nanoTime();
             fLogger = log;
             fLevel = level;
-            fThreadId = Thread.currentThread().getId();
+            fThreadId = Thread.currentThread().threadId();
             fLabel = label;
             char phase = 'B';
             validateArgs(args);
@@ -490,7 +490,7 @@ public final class LogUtils {
             fLevel = level;
             fCategory = category;
             fLabel = label;
-            fThreadId = Thread.currentThread().getId();
+            fThreadId = Thread.currentThread().threadId();
             char phaseB = 'B';
             validateArgs(args);
             Supplier<String> msgSupplier = () -> {
@@ -609,7 +609,7 @@ public final class LogUtils {
      */
     public static int traceObjectCreation(Logger logger, Level level, Object item) {
         long time = System.nanoTime();
-        long threadId = Thread.currentThread().getId();
+        long threadId = Thread.currentThread().threadId();
         int identityHashCode = System.identityHashCode(item);
         char phase = 'N';
         Supplier<String> msgSupplier = () -> {
@@ -640,7 +640,7 @@ public final class LogUtils {
      */
     public static void traceObjectDestruction(Logger logger, Level level, Object item) {
         long time = System.nanoTime();
-        long threadId = Thread.currentThread().getId();
+        long threadId = Thread.currentThread().threadId();
         char phase = 'D';
         Supplier<String> msgSupplier = () -> {
             StringBuilder sb = new StringBuilder();
@@ -670,7 +670,7 @@ public final class LogUtils {
      */
     public static void traceObjectDestruction(Logger logger, Level level, Object item, int uniqueId) {
         long time = System.nanoTime();
-        long threadId = Thread.currentThread().getId();
+        long threadId = Thread.currentThread().threadId();
         char phase = 'D';
         Supplier<String> msgSupplier = () -> {
             StringBuilder sb = new StringBuilder();
@@ -703,7 +703,7 @@ public final class LogUtils {
      */
     public static void traceAsyncStart(Logger logger, Level level, String name, String category, int id, Object... args) {
         long time = System.nanoTime();
-        long threadId = Thread.currentThread().getId();
+        long threadId = Thread.currentThread().threadId();
         char phase = 'b';
         validateArgs(args);
         Supplier<String> msgSupplier = () -> {
@@ -738,7 +738,7 @@ public final class LogUtils {
      */
     public static void traceAsyncNested(Logger logger, Level level, String name, String category, int id, Object... args) {
         long time = System.nanoTime();
-        long threadId = Thread.currentThread().getId();
+        long threadId = Thread.currentThread().threadId();
         char phase = 'n';
         validateArgs(args);
         Supplier<String> msgSupplier = () -> {
@@ -773,7 +773,7 @@ public final class LogUtils {
      */
     public static void traceAsyncEnd(Logger logger, Level level, String name, String category, int id, Object... args) {
         long time = System.nanoTime();
-        long threadId = Thread.currentThread().getId();
+        long threadId = Thread.currentThread().threadId();
         char phase = 'e';
         validateArgs(args);
         Supplier<String> msgSupplier = () -> {
@@ -807,7 +807,7 @@ public final class LogUtils {
      */
     public static void traceInstant(Logger logger, Level level, String name, Object... args) {
         long time = System.nanoTime();
-        long threadId = Thread.currentThread().getId();
+        long threadId = Thread.currentThread().threadId();
         char phase = 'i';
         validateArgs(args);
         Supplier<String> msgSupplier = () -> {
@@ -835,7 +835,7 @@ public final class LogUtils {
      */
     public static void traceCounter(Logger logger, Level level, String name, Object... args) {
         long time = System.nanoTime();
-        long threadId = Thread.currentThread().getId();
+        long threadId = Thread.currentThread().threadId();
         char phase = 'C';
         validateArgs(args);
         Supplier<String> msgSupplier = () -> {
@@ -867,7 +867,7 @@ public final class LogUtils {
      */
     public static void traceMarker(Logger logger, Level level, String name, long duration, Object... args) {
         long time = System.nanoTime();
-        long threadId = Thread.currentThread().getId();
+        long threadId = Thread.currentThread().threadId();
         char phase = 'R';
         validateArgs(args);
         Supplier<String> msgSupplier = () -> {
